--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -23,7 +23,7 @@
   --nav-mobile-background-color: #ffffff; /* Used as the background color for mobile navigation menu */
   --nav-dropdown-background-color: #ffffff; /* Used as the background color for dropdown items that appear when hovering over primary navigation items */
   --nav-dropdown-color: #212529; /* Used for navigation links of the dropdown items in the navigation menu. */
-  --nav-dropdown-hover-color: #0078ff; /* Similar to --nav-hover-color, this color is applied to dropdown navigation links when they are hovered over. */
+  --nav-dropdown-hover-color: #212A31; /* Similar to --nav-hover-color, this color is applied to dropdown navigation links when they are hovered over. */
 }
 
 /* Color Presets - These classes override global colors when applied to any section or element, providing reuse of the sam color scheme. */
@@ -618,6 +618,7 @@ section,
   }
 }
 
+
 /*--------------------------------------------------------------
 # Global Section Titles
 --------------------------------------------------------------*/
@@ -809,6 +810,22 @@ section,
 /*--------------------------------------------------------
 Try something
 */
+/* Style for primary button (GitHub button) */
+.btn-primary {
+    background-color: #212A31; /* Dark gray color */
+    color: #ffffff; /* White text for contrast */
+    border: none; /* Remove border */
+    padding: 10px 20px; /* Adjust padding as needed */
+    text-decoration: none; /* Remove underline */
+    display: inline-block; /* Align properly */
+    border-radius: 5px; /* Optional: rounded corners */
+    font-size: 16px; /* Adjust font size as needed */
+    text-align: center; /* Center text */
+}
+
+.btn-primary:hover {
+    background-color: #2E3944; /* Slightly lighter gray for hover effect */
+}
 
 /*--------------------------------------------------------
 Try something
