removed old cv and photos

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -518,6 +518,9 @@ h6 {
   }
 }
 
+
+
+
 /*--------------------------------------------------------------
 # Scroll Top Button
 --------------------------------------------------------------*/
@@ -714,6 +717,9 @@ section,
     font-size: 20px;
   }
 }
+
+/*
+Try something scroll
 
 
 /*--------------------------------------------------------------
