Updated gitignore file

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -42,7 +42,7 @@
 }
 
 .accent-background {
-  --background-color: #2E3944;
+  --background-color: #212a31;
   --default-color: #ffffff;
   --heading-color: #ffffff;
   --accent-color: #ffffff;
@@ -1146,3 +1146,4 @@ Try something scroll
 .starter-section {
 
 }
+
